# blackjack

./: README.md  mmaker.cabal  stack.yaml
src/: Main.hs
src/App/: Blackjack.hs  Chat.hs  Common.hs  Config.hs  Matchmake.hs  Turnbased.hs
src/Game/: Blackjack.hs
static/: blackjack.html  blackjack.js  group.html  group.js  index.html  match-websocket.js  match.html  mmaker.js
tests/Game/: BlackjackSpec.hs
