name:                mmaker
version:             0.1.0.0
synopsis:            Simple Matchmaking Server
description:         Please see README.md
homepage:            https://github.com/nymacro/mmaker#readme
license:             BSD3
license-file:        LICENSE
author:              Aaron Marks
maintainer:          nymacro@gmail.com
copyright:           2016 Aaron Marks
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mmaker
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai
                     , wai-websockets
                     , wai-extra
                     , wai-middleware-static
                     , websockets
                     , scotty
                     , bytestring
                     , text
                     , stm
