name:                mmaker
version:             0.1.0.0
synopsis:            Simple Matchmaking Server
description:         Please see README.md
homepage:            https://github.com/nymacro/mmaker#readme
license:             BSD3
license-file:        LICENSE
author:              Aaron Marks
maintainer:          nymacro@gmail.com
copyright:           2016 Aaron Marks
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Game.Blackjack
  other-extensions:    OverloadedStrings
  build-depends:       random
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5

executable mmaker
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -eventlog -rtsopts=all
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai
                     , wai-websockets
                     , wai-extra
                     , wai-middleware-static
                     , websockets
                     , scotty
                     , bytestring
                     , text
                     , stm
                     , unagi-chan
                     , random
                     , aeson
                     , containers
                     , uuid
                     , async

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TestMain.hs
  ghc-options:         -Wall
  -- default-extensions: 
  default-language:    Haskell2010
  build-depends:       base
                     , mmaker
                     , hspec
                     , QuickCheck
